@@ -1,6 +1,6 @@
 OpenLDAP 2.2 Change Log
 
-OpenLDAP 2.2.28 Engineering
+OpenLDAP 2.2.28 Release
 	Fixed slapd shutdown crash on NULL slap_listeners (ITS#3842)
 	Fixed slapd using hashed passwords on SASL binds (ITS#3846)
 	Fixed back-bdb/hdb - check for BDB TXN patch
@@ -13,6 +13,8 @@ OpenLDAP 2.2.28 Engineering
 	Fixed back-meta control propagation bug (ITS#3813)
 	Fixed syncrepl SASL bind crash (ITS#3792)
 	Fixed libldap infinite referral loop (ITS#2894, ITS#3578)
+	Updated Assertion control to use IANA-assigned OID
+	Updated pre/post read controls to use IANA-assigned OIDs
 	Build Environment
 		Added BDB TXN patch in build/BerkeleyDB42.patch
 
